Spacing fix for search apprentice section header

--- a/src/SFA.DAS.ProviderApprenticeshipsService.Web/src/sass/_custom.scss
+++ b/src/SFA.DAS.ProviderApprenticeshipsService.Web/src/sass/_custom.scss
@@ -813,6 +813,7 @@ width: 100%;
 
 #search-form{
 		margin:7px 0 15px 0;
+        legend{margin-bottom:0;}
         .heading-medium{margin-top:0;}
         .search-text{
            @include media(tablet) {width:262px;height:39px;}
